# RSS-Rewrite

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  feeds.json.example
src/: main.rs
