[package]
name = "rss-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
error-chain = "0.12.4"
# reqwest = { version = "0.11.18", features = ["blocking"] }
reqwest = "0.11.18"
