[package]
name = "rss-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
lazy_static = "1.4.0"
regex = "1.9.4"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.105"
serde_regex = "1.1.0"
